# max-headroom

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  plan.md  refactor_plan.md
.github/workflows/: flatpak.yml
flatpak/: com.maxheadroom.Headroom.json
packaging/: README.md
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  rules
resources/: com.maxheadroom.Headroom.desktop  com.maxheadroom.Headroom.metainfo.xml
screenshots/: index.html
scripts/: make_screenshots.sh  make_tray_demo_screenshots.sh  make_tray_screenshot.sh  publish_screenshots.sh
src/: MainWindow.cpp  MainWindow.h  MainWindowActions.cpp  MainWindowTray.cpp  app.qrc  main.cpp
src/backend/: AlsaSeqBridge.cpp  AlsaSeqBridge.h  AudioLevelTap.cpp  AudioLevelTap.h  AudioRecorder.cpp  AudioRecorder.h  AudioTap.cpp  AudioTap.h  EngineControl.cpp  EngineControl.h  EqConfig.h  EqManager.cpp  EqManager.h  EqManagerPersist.cpp  EqManagerRealtime.cpp  LogStore.cpp  LogStore.h  ParametricEqFilter.cpp  ParametricEqFilter.h  ParametricEqFilterDesign.cpp  ParametricEqFilterResponse.cpp  PatchbayAutoConnectController.cpp  PatchbayAutoConnectController.h  PatchbayAutoConnectRules.cpp  PatchbayAutoConnectRules.h  PatchbayPortConfig.cpp  PatchbayPortConfig.h  PatchbayProfileHooks.cpp  PatchbayProfileHooks.h  PatchbayProfiles.cpp  PatchbayProfiles.h  PipeWireGraph.cpp  PipeWireGraph.h  PipeWireGraphInternal.h  PipeWireGraphOpsLinks.cpp  PipeWireGraphOpsMetaProfiler.cpp  PipeWireGraphOpsMetadata.cpp  PipeWireGraphOpsNodeControls.cpp  PipeWireGraphOpsProfilerSnapshot.cpp  PipeWireGraphRegistry.cpp  (+6 more)
src/cli/: CliCommands.cpp  CliCommandsEngine.cpp  CliCommandsEngineClock.cpp  CliCommandsEngineMidiBridge.cpp  CliCommandsEngineSystemd.cpp  CliCommandsEq.cpp  CliCommandsGraph.cpp  CliCommandsGraphConnections.cpp  CliCommandsGraphControls.cpp  CliCommandsGraphListing.cpp  CliCommandsPatchbay.cpp  CliCommandsPatchbayAutoconnect.cpp  CliCommandsPatchbayHooks.cpp  CliCommandsPatchbayPortConfig.cpp  CliCommandsRecord.cpp  CliCommandsSession.cpp  CliInternal.h  CliUtil.cpp  main.cpp
src/dsp/: Fft.cpp  Fft.h
src/settings/: SettingsKeys.h  VisualizerSettings.h
src/tui/: TuiApp.cpp  TuiAppActions.cpp  TuiAppActionsDevices.cpp  TuiAppActionsPatchbay.cpp  TuiAppInternal.h  TuiAppRender.cpp  TuiInternal.h  TuiPrompts.cpp  TuiRenderAudio.cpp  TuiRenderEq.cpp  TuiRenderRecording.cpp  TuiRenderSystem.cpp  TuiUtil.cpp  TuiUtilFormat.cpp  TuiUtilPrompts.cpp  main.cpp
src/ui/: AppTheme.cpp  AppTheme.h  AutoConnectRulesDialog.cpp  AutoConnectRulesDialog.h  EngineDialog.cpp  EngineDialog.h  EngineDialogClock.cpp  EngineDialogSystemd.cpp  EqDialog.cpp  EqDialog.h  EqResponseWidget.cpp  EqResponseWidget.h  GraphPage.cpp  GraphPage.h  LevelMeterWidget.cpp  LevelMeterWidget.h  LogsDialog.cpp  LogsDialog.h  MixerPage.cpp  MixerPage.h  MixerRouting.cpp  MixerRows.cpp  PatchbayPage.cpp  PatchbayPage.h  PatchbayProfileHooksDialog.cpp  PatchbayProfileHooksDialog.h  PatchbaySceneBuilder.cpp  PatchbaySceneController.cpp  PatchbaySceneControllerContextMenu.cpp  PatchbaySceneControllerUndo.cpp  PatchbaySceneInternal.h  RecorderDialog.cpp  RecorderDialog.h  RecorderDialogRecording.cpp  RecorderDialogTargets.cpp  SessionsDialog.cpp  SessionsDialog.h  SettingsDialog.cpp  SettingsDialog.h  VisualizerPage.cpp  (+3 more)
